<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lakibeam1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="randy@todo.todo">randy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  



  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
